Add Maven example to README
Added Maven example configuration to README.